--- a/gyakorlofeladat5/package.json
+++ b/gyakorlofeladat5/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
-    "formik-mui": "^5.0.0-alpha.1",
+    "formik-mui": "^4.0.0-alpha.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
