--- a/otletdoboz/package.json
+++ b/otletdoboz/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
-    "formik-mui": "^5.0.0-alpha.1",
+    "formik-mui": "^4.0.0-alpha.3",
     "otletdoboz": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
